--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,6 +53,11 @@ a {
 	}
 }
 
+img.img-logo {
+	width: 100px;
+	height: 100px;
+}
+
 .custom-navbar {
 	background: $primary!important;
 	padding-top: 20px;
