--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,128 @@ a {
   transition: .3s all ease;
   color: #2f2f2f;
   text-decoration: underline; }
+
+.product-page {
+  padding: 40px 0;
+  font-family: Arial, sans-serif;
+}
+
+.product-image img {
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.product-title {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.product-price {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.product-price .price-current {
+  color: #e67e22;
+  font-weight: bold;
+}
+
+.product-price .price-old {
+  text-decoration: line-through;
+  color: #888;
+  margin-left: 10px;
+}
+
+.product-price .price-off {
+  color: #27ae60;
+  margin-left: 10px;
+}
+
+.warranty {
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 20px;
+}
+
+.product-info {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 20px 0;
+}
+
+.product-info li {
+  margin-bottom: 8px;
+}
+
+.quantity-selector {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.quantity-selector input {
+  width: 60px;
+  text-align: center;
+  margin: 0 5px;
+}
+
+.btn-qty {
+  padding: 5px 10px;
+  background: #eee;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.product-actions button {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.btn-buy {
+  background-color: #e67e22;
+  color: white;
+}
+
+.btn-add-cart {
+  background-color: #3498db;
+  color: white;
+}
+
+.btn-wishlist {
+  background-color: #95a5a6;
+  color: white;
+}
+
+ .thumbnail-img {
+      cursor: pointer;
+      border: 2px solid transparent;
+      margin-right: 8px;
+    }
+    .thumbnail-img.active {
+      border-color: orange;
+    }
+    .price-original {
+      text-decoration: line-through;
+      color: #888;
+    }
+    .btn-orange {
+      background-color: #ec6d1e;
+      color: white;
+    }
+
+
+  img.img-logo {
+    width: 140px;
+    height: 140px;
+    padding-left: 10px;
+    padding-bottom: 1px;
+    padding-top: 10px;
+}
   a:hover {
     color: #2f2f2f;
     text-decoration: none; }
@@ -32,8 +154,8 @@ a {
 
 .custom-navbar {
   background: #3b5d50 !important;
-  padding-top: 20px;
-  padding-bottom: 20px; }
+  padding-top: 1px;
+  padding-bottom: 1px; }
   .custom-navbar .navbar-brand {
     font-size: 32px;
     font-weight: 600; }
@@ -100,10 +222,13 @@ a {
   padding: calc(4rem - 30px) 0 0rem 0; }
   @media (min-width: 768px) {
     .hero {
-      padding: calc(4rem - 30px) 0 4rem 0; } }
+      padding: calc(4rem - 30px) 0 1rem 0; 
+      margin-bottom: -120px;
+      margin-top: -5px
+    } }
   @media (min-width: 992px) {
     .hero {
-      padding: calc(8rem - 30px) 0 8rem 0; } }
+      padding: calc(4rem - 30px) 0 5rem 0; } }
   .hero .intro-excerpt {
     position: relative;
     z-index: 4; }
@@ -126,8 +251,11 @@ a {
       position: relative;
       top: 0px;
       right: 0px;
+      left: -100px;
+      margin-bottom: -50px;
+      padding-bottom: 190px;
       z-index: 2;
-      max-width: 780px;
+      max-width: 650px;
       left: -20px; }
       @media (min-width: 768px) {
         .hero .hero-img-wrap img {
@@ -270,7 +398,13 @@ a {
       height: 70%; }
 
 .why-choose-section {
-  padding: 7rem 0; }
+  padding: 7rem 0;
+  padding-left: 7rem;
+  padding-bottom: 1px;
+ }
+
+  img.imf-fluid{padding-left: 30px;} 
+
   .why-choose-section .img-wrap {
     position: relative; }
     .why-choose-section .img-wrap:before {
@@ -289,7 +423,7 @@ a {
       border-radius: 20px; }
 
 .feature {
-  margin-bottom: 30px; }
+  margin-bottom: 10px; }
   .feature .icon {
     display: inline-block;
     position: relative;
@@ -305,7 +439,9 @@ a {
       bottom: 0; }
   .feature h3 {
     font-size: 14px;
-    color: #2f2f2f; }
+    color: #2f2f2f;
+    padding-left: 8px;
+   }
   .feature p {
     font-size: 14px;
     line-height: 22px;
@@ -621,7 +757,7 @@ a {
       font-size: 14px !important; }
 
 .untree_co-section {
-  padding: 7rem 0; }
+  padding: 10rem 0; }
 
 .form-control {
   height: 50px;
