--- a/furniture/furni/templates/furni/category.html
+++ b/furniture/furni/templates/furni/category.html
@@ -42,8 +42,7 @@
     <div class="col-md-4 col-lg-3">
       <div class="card border-0 shadow-sm h-100">
         <div class="position-relative">
-          <a href="shop copy 2.html"><img src="{{product.img.url}}" class="card-img-top" alt="Product"></a>
-          
+          <a href="{% url 'product' cat_id=product.category.id prod_id=product.id %}"><img src="{{product.img.url}}" class="card-img-top" alt="Product"></a>
         </div>
         <div class="card-body">
           <p class="text-muted small mb-1">{{product.serial_no}}</p>
