add to cart added fully without sessions

--- a/furniture/furni/templates/furni/about.html
+++ b/furniture/furni/templates/furni/about.html
@@ -25,7 +25,7 @@
 <section class="py-5 bg-light" style="margin-top: 150px">
   <div class="container">
     <h2 class="mb-4 text-primary fw-bold">
-      MODULE — A Modern Way to Shop Furniture That Feels Like Home
+      Our Story
     </h2>
 	<p class="mb-5 text-muted">
 		At Module Furniture, we blend tradition with innovation, offering a diverse range of high-quality furniture
