--- a/furniture/templates/navbar.html
+++ b/furniture/templates/navbar.html
@@ -31,7 +31,7 @@
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="home2"><img src="{% static 'images\module-logo.png' %}" class="img-logo"></a>
+				<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images\module-logo.png' %}" class="img-logo"></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -40,11 +40,11 @@
 				<div class="collapse navbar-collapse" id="navbarsFurni">
 					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
 						<li class="nav-item active">
-							<a class="nav-link" href="home2">Home</a>
+							<a class="nav-link" href="{% url 'home' %}">Home</a>
 						</li>
-						<li><a class="nav-link" href="shop">Shop</a></li>
-						<li><a class="nav-link" href="about">About us</a></li>
-						<li><a class="nav-link" href="contact">Contact us</a></li>
+						<li><a class="nav-link" href="{% url 'shop' %}">Shop</a></li>
+						<li><a class="nav-link" href="{% url 'aboutus' %}">About us</a></li>
+						<li><a class="nav-link" href="{% url 'contactus' %}">Contact us</a></li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
