pincode functionality added and leadership page added

--- a/furniture/furni/templates/furni/contact.html
+++ b/furniture/furni/templates/furni/contact.html
@@ -68,7 +68,9 @@
                   </svg>
                 </div> <!-- /.icon -->
                 <div class="service-contents">
-                  <p>thayyil@gmail.com</p>
+                  <a href="mailto:modulefurnitures@gmail.com" style="text-decoration: none;">
+                  <p>modulefurnitures@gmail.com</p>
+                  </a>
                 </div> <!-- /.service-contents-->
               </div> <!-- /.service -->
             </div>
