--- a/furniture/templates/footer.html
+++ b/furniture/templates/footer.html
@@ -1,108 +1,135 @@
 {% load static %}
 <!-- Start Footer Section -->
-		<footer class="footer-section">
-			<div class="container relative">
-				<div class="row g-5 align-items-start mb-5">
-					<div class="col-lg-6">
-						<h5 class="text-uppercase fw-bold text-danger">Module Furniture & Interiors</h5>
-						<p><strong>Timing :</strong> Mon - Sun 9:30 AM to 8:30 PM</p>
-						<p><strong>Contact :<a href = "tel: +91 8129718086"></strong>+91 8129718086</a></p>
-				
-						<p><strong>Address</strong><br>
-							MANAKKAPADY, IRUMPANAM <br>
-							THRIPPUNITHURA,KOCHI<br>
-							KERALA 682309
-						</p>
-				
-						<div class="mt-3 store-buttons">
-							<a href="#" class="btn me-2" white="">Book Store Visit</a>
-							<a href="https://maps.app.goo.gl/4RALF3jt4C3Ma1X59" target="_blank" class="btn">Get Direction</a>
-						</div>
-					</div>
-				
-					<div class="col-lg-6">
-						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.5727017710888!2d76.35405307503079!3d9.969463890134316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0873c2157fd857%3A0x41607786bbad0e2c!2sModule%20Furniture%20%26%20Interiors!5e0!3m2!1sen!2sin!4v1755058521846!5m2!1sen!2sin"
-							width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-							referrerpolicy="no-referrer-when-downgrade">
-						</iframe>
-					</div>
-				</div>
-				<div class="row g-5 mb-5">
-					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="home2" class="footer-logo">Module <span>Furnitures</span></a></div>
-						<p class="mb-4">At Module Furniture, we blend tradition with innovation to offer high-quality furniture for every space. As a proud subsidiary of Thayyil Furniture trusted by households and businesses for decades we bring a fresh, modern perspective to the industry.</p>
+<footer class="footer-section">
+	<div class="container relative">
+		<div class="row g-5 align-items-start mb-5">
+			<div class="col-lg-6">
+				<h5 class="text-uppercase fw-bold text-danger">Module Furniture & Interiors</h5>
+				<p><strong>Timing :</strong> Mon - Sun 9:30 AM to 8:30 PM</p>
+				<p><strong>Contact :<a href="tel: +91 8129718086"></strong>+91 8129718086</a></p>
 
-						<ul class="list-unstyled custom-social">
-							<li><a href="https://www.facebook.com/people/Module-Furniture/61553143696798/?ref=_ig_profile_ac"><span class="fa fa-brands fa-facebook-f"></span></a></li>
-							<li><a href="https://www.instagram.com/module_furniture_/"><span class="fa fa-brands fa-instagram"></span></a></li>
-							<li><a href="https://wa.me/918129718086?text=I'm%20interested%20in%20buying%20some%20furniture"><span class="fa fa-brands fa-whatsapp"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
+				<p><strong>Address</strong><br>
+					MANAKKAPADY, IRUMPANAM <br>
+					THRIPPUNITHURA,KOCHI<br>
+					KERALA 682309
+				</p>
+
+				<div class="mt-3 store-buttons">
+					<a href="#" class="btn me-2" white="">Book Store Visit</a>
+					<a href="https://maps.app.goo.gl/4RALF3jt4C3Ma1X59" target="_blank" class="btn">Get Direction</a>
+				</div>
+			</div>
+
+			<div class="col-lg-6">
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.5727017710888!2d76.35405307503079!3d9.969463890134316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0873c2157fd857%3A0x41607786bbad0e2c!2sModule%20Furniture%20%26%20Interiors!5e0!3m2!1sen!2sin!4v1755058521846!5m2!1sen!2sin"
+					width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade">
+				</iframe>
+			</div>
+		</div>
+		<div class="row g-5 mb-5">
+			<div class="col-lg-4">
+				<div class="mb-4 footer-logo-wrap"><a href="home2" class="footer-logo">Module
+						<span>Furnitures</span></a></div>
+				<p class="mb-4">At Module Furniture, we blend tradition with innovation to offer high-quality furniture
+					for every space. As a proud subsidiary of Thayyil Furniture trusted by households and businesses for
+					decades we bring a fresh, modern perspective to the industry.</p>
+
+				<ul class="list-unstyled custom-social">
+					<li><a href="https://www.facebook.com/people/Module-Furniture/61553143696798/?ref=_ig_profile_ac"><span
+								class="fa fa-brands fa-facebook-f"></span></a></li>
+					<li><a href="https://www.instagram.com/module_furniture_/"><span
+								class="fa fa-brands fa-instagram"></span></a></li>
+					<li><a href="https://wa.me/918129718086?text=I'm%20interested%20in%20buying%20some%20furniture"><span
+								class="fa fa-brands fa-whatsapp"></span></a></li>
+					<li><a href="https://www.linkedin.com/company/module-furnitures/about/"><span
+								class="fa fa-brands fa-linkedin"></span></a></li>
+				</ul>
+			</div>
+
+
+
+			<div class="col-lg-8">
+				<div class="row links-wrap">
+					<div class="col-6 col-sm-6 col-md-3">
+						<ul class="list-unstyled">
+							<li><a href="#">About us</a></li>
+							<li><a href="{% url 'services' %}">Services</a></li>
+
 						</ul>
 					</div>
 
-					<div class="col-lg-8">
-						<div class="row links-wrap">
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Services</a></li>
-									
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Support</a></li>
-									<li><a href="#">Leadership</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Jobs</a></li>
-									<li><a href="#">Our team</a></li>
-	
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Blog</a></li>
-									<li><a href="#">Contact us</a></li>
-								</ul>
-							</div>
-						</div>
+					<div class="col-6 col-sm-6 col-md-3">
+						<ul class="list-unstyled">
+							<li><a href="#">Support</a></li>
+							<li><a href="{% url 'leaders' %}">Leadership</a></li>
+						</ul>
 					</div>
 
-				</div>
+					<div class="col-6 col-sm-6 col-md-3">
+						<ul class="list-unstyled">
+							<li><a href="#">Jobs</a></li>
+							<li><a href="#">Our team</a></li>
 
-				<div class="border-top copyright">
-					<div class="row pt-4">
-						<div class="col-lg-6">
-							<p class="mb-2 text-center text-lg-start">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> <!-- License information: https://untree.co/license/ -->
-            </p>
-						</div>
+						</ul>
+					</div>
 
-						<div class="col-lg-6 text-center text-lg-end">
-							<ul class="list-unstyled d-inline-flex ms-auto">
-								<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-							</ul>
-						</div>
-
+					<div class="col-6 col-sm-6 col-md-3">
+						<ul class="list-unstyled">
+							<li><a href="#">Blog</a></li>
+							<li><a href="#">Contact us</a></li>
+						</ul>
 					</div>
 				</div>
+				<!--
+						<div class="payment-methods ms-4" style="padding-top:80px;">
+        <p class="fw-bold mb-2"></p>
+        <div class="d-flex flex-wrap gap-2" ">
+            <img src="{% static 'images/visa.jpg' %}" alt="Visa" height="32">
+            <img src="{% static 'images/mastercard.jpg' %}" alt="MasterCard" height="32">
+            <img src="{% static 'images/maestro1.png' %}" alt="Maestro" height="32">
+            <img src="{% static 'images/amex.jpg' %}" alt="American Express" height="32">
+            <img src="{% static 'images/diners.jpg' %}" alt="RuPay" height="32">
+            <img src="{% static 'images/upi1.jpg' %}" alt="Diners Club" height="32">
+            <img src="{% static 'images/wallet.jpg' %}" alt="Wallet" height="32">
+            <img src="{% static 'images/net.jpg' %}" alt="Net Banking" height="32">
+        </div>
+    </div>
+-->
+			</div>
+
+		</div>
+
+		<div class="border-top copyright">
+			<div class="row pt-4">
+				<div class="col-lg-6">
+					<p class="mb-2 text-center text-lg-start">Copyright &copy;
+						<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash;
+						Designed with love by <a href="https://untree.co">Untree.co</a>
+						<!-- License information: https://untree.co/license/ -->
+					</p>
+				</div>
+
+				<div class="col-lg-6 text-center text-lg-end">
+					<ul class="list-unstyled d-inline-flex ms-auto">
+						<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
+						<li><a href="#">Privacy Policy</a></li>
+					</ul>
+				</div>
+
 
 			</div>
-		</footer>
-		<!-- End Footer Section -->	
+		</div>
+
+	</div>
+</footer>
+<!-- End Footer Section -->
 
 
-		<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-		<script src="{% static 'js/tiny-slider.js' %}"></script>
-		<script src="{% static 'js/custom.js' %}"></script>
-	</body>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js/tiny-slider.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
+</body>
 
 </html>
-
