--- a/furniture/furni/templates/furni/home.html
+++ b/furniture/furni/templates/furni/home.html
@@ -14,7 +14,7 @@
 						</div>
 						<div class="col-lg-7">
 							<div class="hero-img-wrap">
-								<img src="{% static 'images\couch.png' %}"class="img-fluid">
+								<img src="{% static 'images\sofa4.png' %}"class="img-fluid">
 							</div>
 						</div>
 					</div>
